--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
             <em>Pebbles, New York</em>
           </div>
           <div class="carousel-item">
-            <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of
+            <h2 class="testimonial-text">" My dog used to be so lonely, but with TinDog's help, they've found the love of
               their
-              life. I think.</h2>
+              life. I think. "</h2>
             <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
             <em>Beverly, Illinois</em>
           </div>
